# ecgai-data-physionet-grpc

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
src/ecgai_data_physionet_grpc/: client.py  commands.txt  logging.conf  mapper.py  server.py
src/ecgai_data_physionet_grpc/get_by_id_service/: __init__.py
src/ecgai_data_physionet_grpc/protos/: get_by_id.proto
tests/: builder_factory.py  methods.py  test_file_read.py  test_mapper.py  test_server.py
